--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section fullscreen-img="img/cover_image.jpg" >
+				<section fullscreen-img="img/book.jpg" >
 					<h2>Syrup <small>- App Log Analysis</small></h2>
 					<h5>collection of interactive charts</h5>
 					<p>BI추진단 | BI그룹</p>
@@ -56,7 +56,7 @@
 					<h3>Key Indicator #1 <br>
 						<small>1인당 멤버십 카드 및 지불 결제 카드 보유 수</small>
 					</h3>
-					<div id="ki01" style="width: 900px; height: 600px;"></div>
+					<div id="ki01" style="width: 900px; height: 500px;"></div>
 					<script type="text/javascript">
 						
 						google.load('visualization', '1.1', {'packages':['annotationchart']});
