--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@
 					<section>
 						<p>카드 추가 페이지 내 영역 별 클릭 방문 수</p>
 						<div class="row">
-							<div class="col-md-6">
+							<div class="col-xs-9 col-md-6">
 								<div id="img_div"> </div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-xs-9 col-md-6">
 								<div id="table_div"> </div>
 							</div>
 						</div>
@@ -560,7 +560,6 @@
 
 								});
 							}
-
 							draw_sub4_01();
 						</script>
 
@@ -574,7 +573,7 @@
 								    var thead = table.append("thead"),
 								        tbody = table.append("tbody");
 
-								    var columns = ["Action", "Clicks","Click_Visits"];
+								    var columns = ["Action", "Num_Clicks","Num_Click_Visits"];
 							
 								    thead.append("tr").selectAll("th")
 								        .data(columns)
@@ -599,7 +598,6 @@
 									
 								});
 							}
-
 							draw_sub4_02();
 						</script>
 
